feat: Implemented several bug fixes/improvements/new features